--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@ $(function() {
 <div class="title">Building Game Engines Documentation</div>  </div>
 </div><!--header-->
 <div class="contents">
-  <h2>Post Mortem</h2>
+  <h2>Post-Mortem</h2>
   <h3>Justin</h3>
   <p>
     There are few different things that I would change In this project if I had 8 more weeks to work on this project. 
     The first thing I would do is create a main menu and multiple different levels that could be chosen from. Maybe 
     create some different enemies and create the abstractions path for that. The next thing I would do is work 
-    more on the animation cycles of different Ai fruit and the players themselves Animation is such a small thing 
+    more on the animation cycles of different AI fruit and the players themselves. Animation is such a small thing 
     but really polishes a game. Also expanded to have more tiles.
   </p>
   <h3>Alex</h3>
