--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ $(function() {
   </p>
   <h2>Trailer</h2>
   <div style="text-align:center">
-    <video src="Platformer Trailer.mp4" width=640 height=360 controls></video>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/KB41Ak8HKOw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <h2>Screenshots</h2>
   <div style="text-align:center">
