--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@ $(function() {
   </p>
   <h2>Trailer</h2>
   <div style="text-align:center">
+    <p>
+     If the embed is not working: <a href="https://youtu.be/KB41Ak8HKOw"> the link is here.</a>
+    </p>
     <iframe width="560" height="315" src="https://www.youtube.com/embed/KB41Ak8HKOw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <h2>Screenshots</h2>
