--- a/index.html
+++ b/index.html
@@ -62,31 +62,28 @@ $(function() {
 <div class="title">Building Game Engines Documentation</div>  </div>
 </div><!--header-->
 <div class="contents">
-  <h2>Post-Mortem</h2>
+  <h2>Post Mortem</h2>
+  <h3>Alex</h3>
+  <p>
+    If I had more time I would probably do some research on ways to make the collisions and movement smoother.  
+    Our current method works reasonably well, but still gets hung up now and then and jitters against the walls when you run into them constantly.  
+    Improving this would make the game feel more polished and consistent. Another obvious area of expansion is simply in game content. Right now the game only has one level, 
+    adding more would be a good idea.  We could also add in the ability to have a level larger than the screen, 
+    and a camera that tracked the player. That would allow for much more interesting and involved levels.
+  </p>
   <h3>Justin</h3>
   <p>
     There are few different things that I would change In this project if I had 8 more weeks to work on this project. 
     The first thing I would do is create a main menu and multiple different levels that could be chosen from. Maybe 
     create some different enemies and create the abstractions path for that. The next thing I would do is work 
-    more on the animation cycles of different AI fruit and the players themselves. Animation is such a small thing 
+    more on the animation cycles of different Ai fruit and the players themselves Animation is such a small thing 
     but really polishes a game. Also expanded to have more tiles.
-  </p>
-  <h3>Alex</h3>
-  <p>
-    If I had more time I would probably do some research on ways to make the collisions and movement smoother.  
-    Our current method works reasonably well, but still gets hung up now and then and jitters against the walls when you run into them constantly.  
-    Improving this would make the game feel more polished and consistent.
-  </p>
-  <p>
-    Another obvious area of expansion is simply in game content.  Right now the game only has one level, 
-    adding more would be a good idea.  We could also add in the ability to have a level larger than the screen, 
-    and a camera that tracked the player. That would allow for much more interesting and involved levels.
   </p>
   <h3>Akash</h3>
   <p>
     Looking back at this project, I see ways that we could have changed how some of our classes work and interact each with other, 
     but it's hard to see this before actually writing the code. Refactoring the code at this point would take too much time, but for 
-    future projects, we may want to plan out how everything will interact before coding things.  The resource manager is one area where 
+    future projects, we may want to plan out how everything will interact before coding things. The resource manager is one area where 
     said improvements could have been made to further decouple the classes and allow for easier use in the future. Also, the game would 
     feel a lot more polished if we were able to implement some small quality-of-life changes, such as more sound effects and animations.
   </p>
@@ -102,10 +99,7 @@ $(function() {
   </p>
   <h2>Trailer</h2>
   <div style="text-align:center">
-    <p>
-     If the embed is not working: <a href="https://youtu.be/KB41Ak8HKOw"> the link is here.</a>
-    </p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/KB41Ak8HKOw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <video src="Platformer Trailer.mp4" width=640 height=360 controls></video>
   </div>
   <h2>Screenshots</h2>
   <div style="text-align:center">
@@ -118,7 +112,7 @@ $(function() {
     <img src="Capture3(1).PNG" width=1000 height=666>
   </div>
   <h2>Downloads</h2>
-  <a href="game">Download executable</a>
+ <a href="game">Download executable</a>
 </div><!-- contents -->
 <!-- start footer part -->
 <hr class="footer"/><address class="footer"><small>
